# Revenant.AI

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  REVAMP.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
agents/: __init__.py  base.py  bridge.py  cli.py  context.py  demo_razorpay.py  demo_razorpay_deck.py  demo_razorpay_split.py  dossier.py  hermes_link.py  mcp_server.py  memory.py  runner.py  tools.py  ui.py
agents/demo_razorpay_assets/: razorpay-boat-deck.pptx
agents/demo_razorpay_site/: index.html
agents/demo_rigi_site/: index.html
agents/director/: __init__.py  agent.py  avatar.py  hosting.py  muxer.py  prompt.py  recorder.py  (+3 more)
console/: .gitignore  index.html  package-lock.json  package.json
convex/: campaigns.ts  crons.ts  http.ts  internal.ts  ledger.ts  package.json  schema.ts
docs/: compliance.md  demo-script.md  design-lineage.md
ghost/: __init__.py  agents.py  builder.py  cli.py  config.py  deploy.py  director.py  events.py  fixtures.py  followup.py  gate.py  ledger.py  llm.py  log.py  models.py  outreach.py  payments.py  pipeline.py  profiler.py  recon.py  sellers.py  voice.py
hermes/: README.md  SOUL.revenant.md
scripts/: autopilot_demo.py  console_render_test.py  crew_build_test.py  crew_chain.py  crew_film_context_test.py  crew_sales_context_test.py  crew_stress.py  engineer_specificity_prompt_test.py  gen_demo_data.py  hermes_run.py  hermes_setup.py  run_bot_service.sh  split_demo_smoke.py  sync_console.py
templates/: microsite.html.j2
website/: README.md  console.html  index.html
(+54 files in other folders)
