[project]
name = "revenant"
version = "0.1.0"
description = "Revenant — the autonomous outbound engineer. Hunts pain, ships a working prototype, films an AI walkthrough, follows up while you sleep."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Himanshu Thakur", email = "himan7781@gmail.com" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "openai>=1.40",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Heavier / environment-specific extras. The core pipeline runs without these
# in OFFLINE mode (canned fixtures), so tests and the golden-set gate never
# require network or a browser.
media = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
# Legacy scripted pipeline — kept working for the console demo.
ghost = "ghost.cli:app"
# The new agent-fleet CLI. `revenant chat` opens the Orchestrator REPL.
revenant = "agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghost", "agents"]

[tool.pytest.ini_options]
testpaths = ["ghost/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
